# FFmpeg

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/libs/include/libavutil/: ffversion.h
app/src/androidTest/java/com/furzoom/lab/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/furzoom/lab/ffmpeg/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/furzoom/lab/ffmpeg/: ExampleUnitTest.java
app/test/: CMakeCache.txt
gradle/wrapper/: gradle-wrapper.properties
